change style of techniques link

--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -27,7 +27,8 @@
                             <h6>{{ tech.technique.technique_title }}</h6>
                             <div class="box-object-left">
                                 <a href="{{ tech.technique.tutorial_link }}">
-                                    <i class="fas fa-link"></i>
+                                    <i class="fas fa-film"></i>
+                                    <span class="info-text">ویدیو آموزشی</span>
                                 </a>
                             </div>
                         </div>
