--- a/static/css/style.css
+++ b/static/css/style.css
@@ -619,7 +619,7 @@ img {
     }
 }
 
-.fixed-back .close {
+.fixed-back .close,.modal .close {
     position: absolute;
     top: 5px;
     left: 5px;
@@ -630,7 +630,8 @@ img {
     z-index: 100;
 }
 
-.fixed-back .close:after, .fixed-back .close:before {
+.fixed-back .close:after, .fixed-back .close:before,
+.modal .close:after, .modal .close:before{
     background-color: #707070;
     content: "";
     display: block;
@@ -641,23 +642,24 @@ img {
     transform-origin: center center;
 }
 
-.fixed-back .close:after {
+.fixed-back .close:after,.modal .close:after {
     height: 1.5px;
     width: 70%;
 }
 
-.fixed-back .close:before {
+.fixed-back .close:before, .modal .close:before {
     height: 70%;
     width: 1.5px;
 }
 
-.fixed-back .close:hover {
+.fixed-back .close:hover, .modal .close:hover {
     cursor: pointer;
     border: none;
     background-color: #ff4545;
 }
 
-.fixed-back .close:hover:after, .fixed-back .close:hover:before {
+.fixed-back .close:hover:after, .fixed-back .close:hover:before,
+.modal .close:hover:after, .modal .close:hover:before{
     background-color: #fff;
 }
 
@@ -3631,6 +3633,15 @@ a.top-button i {
     color: #ffffff;
 }
 
+.border-button.warning-button {
+    border-color: #FFD700;
+    color: #FFD700;
+}
+
+.border-button.warning-button:hover {
+    background-color: #FFD700;
+    color: #ffffff;
+}
 /***
 ****   Question    ****
 ****/
@@ -4163,3 +4174,45 @@ pre#question-body {
     background-size: contain;
 }
 
+.modal-header, .modal-footer {
+    border: none;
+}
+.modal-header {
+    direction: rtl;
+}
+.modal-header .close {
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+.modal-footer {
+    direction: rtl;
+}
+.modal-footer.center-button button{
+    margin: auto;
+    padding: 5px 20px;
+}
+.modal-body {
+    font-weight: 500;
+    color: #707070;
+    direction: rtl;
+    padding-bottom: 0;
+}
+.modal-body h6 {
+    color: #3CCD1C;
+}
+.warning-modal .modal-body h6 {
+    color: #FFD700;
+}
+.modal-body p {
+    margin: 0;
+}
+.modal-body .modal-image {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    width: 100px;
+    height: 100px;
+    display: block;
+    margin: 10px auto 20px;
+}
