debug showProject in Expert

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -74,7 +74,7 @@
                                             <div class="date text-center">
                                                 <div class="label">مهلت</div>
                                                 <div class="value">
-                                                    {#                                                    <span>{% calculate_date_remaining project.date_finished %}</span>#}
+                                                    <span>{% calculate_date_remaining project.date_finished %}</span>
                                                     <!-- <span>3</span>
                                                     <span>روز</span> -->
                                                 </div>
