--- a/researcher/templates/researcher/layouts/comment.html
+++ b/researcher/templates/researcher/layouts/comment.html
@@ -8,7 +8,7 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
-                        <input type="text" class="project_id" name="project_id" value="" hidden>
+                        <input type="text" class="project_id" name="project_id" hidden>
                         <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                         <div class="send-comment-container">
                             <button class="image-btn-circle" type="submit"></button>
