edit style of userInfo

--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -6,7 +6,7 @@
         <div class="card-side has-image">
             <div class="user-personal-info">
                 <div class="expert-profile">
-                    <img src="" alt="profile-img" id="expert_photo">
+                    <img src="{% static 'industry/img/profile.jpg' %}" alt="profile-img" id="expert_photo">
                 </div>
                 <div class="information">
                     <h6 id="expert_name"></h6>
