debug expert project preview

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -451,7 +451,7 @@ img {
     top: 0;
     left: 50%;
     color: #262626;
-    padding: 65px 5px 55px 5px;
+    padding: 70px 5px 55px 5px;
     overflow: hidden;
     border-color: transparent;
     -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -706,9 +706,9 @@ img {
 .fixed-back .card-head {
     position: absolute;
     top: 10px;
-    right: 10px;
-    font-weight: 400;
-    font-size: 15px;
+    right: 20px;
+    font-weight: 800;
+    font-size: 17px;
     color: #3ccd1c;
     direction: rtl;
 }
@@ -2625,6 +2625,12 @@ span.title-back {
     text-align: justify;
 }
 
+.project-info-content .answer {
+    display: block;
+    unicode-bidi: embed;
+    white-space: pre-line;
+}
+
 .accept-btn, .refuse-btn {
     padding: 10px 5px;
     -webkit-border-radius: 0.25em;
@@ -4246,4 +4252,9 @@ span.border-span {
     -moz-border-radius: 0.25em;
     border-radius: 0.25em;
     margin-left: 5px;
+    /*background-image: linear-gradient(to right,rgba(144, 144, 144, 1) 60%, rgba(112, 112, 112, 0) 0%);*/
+    /*background-position: bottom;*/
+    /*background-size: 15px 2.5px;*/
+    /*background-repeat: repeat-x;*/
+    box-shadow: 0 0 2px 0 #3CCD1C;
 }
