a little bugs fixed

--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -110,7 +110,7 @@
                                     </div>
                                     <div class="col-6 text-right">
                                         <button class="border-button confirm-researcher"
-                                                id="{{ researcher.profile.id }}">تایید
+                                                id="{{ researcher.profile.id }}" value="{{project.id}}">تایید
                                         </button>
                                     </div>
                                 </div>
