show Project Detail to industry

--- a/expert/templates/expert/layouts/project_details.html
+++ b/expert/templates/expert/layouts/project_details.html
@@ -33,7 +33,7 @@
                                         <div class="pre-header">
                                             <span>مجری</span>
                                         </div>
-                                        <div id="enforced-name">
+                                        <div id="enforcer-name">
                                             استاد فلانی
                                         </div>
                                     </div>
