--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -8,6 +8,7 @@
         {% include 'industry/layouts/initial_information.html' %}
     {% endif %}
     {% include 'industry/layouts/showProject.html' %}
+    {% include 'industry/layouts/project_details.html' %}
     {% include 'industry/layouts/vote_dialog.html' %}
     {% include 'industry/layouts/expertResume.html' %}
 {% endblock %}
