--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -29,7 +29,7 @@
                     <input type="text" name="expert_id" id="expert_id" hidden>
                     <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                     <div class="send-comment-container">
-                        <button class="image-btn-circle" type="submit"></button>
+                        <button class="image-btn-circle comment_submit" type="submit"></button>
                         <div class="comment-input">
                             <label for="description"></label>
                             <textarea dir="rtl" id="description" class="" name="description" rows="1"
