--- a/industry/templates/industry/layouts/showProject.html
+++ b/industry/templates/industry/layouts/showProject.html
@@ -38,23 +38,23 @@
                     <div class="project-info-tabs">
                         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                              aria-orientation="vertical">
-                            <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-home"
+                            <a class="nav-link active" id="v-pills-majors-tab-preview" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-majors"
                                aria-selected="true">
                                 شاخص ها
                             </a>
-                            <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-profile"
+                            <a class="nav-link" id="v-pills-approaches-tab-preview" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-approaches"
                                aria-selected="false">
                                 راهکار ها
                             </a>
-                            <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-messages"
+                            <a class="nav-link" id="v-pills-resources-tab-preview" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-resources"
                                aria-selected="false">
                                 منابع مورد نیاز
                             </a>
-                            <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-                               role="tab" aria-controls="v-pills-settings"
+                            <a class="nav-link" id="v-pills-roles-tab-preview" data-toggle="pill"
+                               role="tab" aria-controls="v-pills-roles"
                                aria-selected="false">
                                 قوانین
                             </a>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="section">
                         <div class="project-info-innerDiv">
-                            <div class="project-info-content">
+                            <div class="project-info-content-preview">
                                 {#                                <div>#}
                                 {#                                    <div class="question">#}
                                 {#                                        <span class="question-mark">#}
