Debug researcher request project

--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -284,7 +284,7 @@
                 {#                <div class="inner-card card">#}
                 {#                    #}
                 {#                </div>#}
-                <div class="card box flow-root-display w-100">
+                <!-- <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
                         <h6>ویژگی های شخصیتی</h6>
                     </div>
@@ -777,7 +777,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="card-header">تکنیک ها</div>
                 <div class="inner-card card">
                     <div class="row">
