disable apply project button

--- a/expert/templates/expert/layouts/select_techniques.html
+++ b/expert/templates/expert/layouts/select_techniques.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="card-footer">
                     <button class="save-btn" id="accept-techniques" type="submit">
-                        ثبت و ارسال درخواست
+                        ثبت و درخواست ملاقات
                     </button>
                 </div>
             </form>
