--- a/expert/templates/expert/layouts/showProject.html
+++ b/expert/templates/expert/layouts/showProject.html
@@ -98,7 +98,7 @@
             </div>
             <div class="card-footer">
                 <button class="save-btn confirm_project" id="accept-project">
-                    تایید و شروع پروژه
+                    تایید و انتخاب تکینک
                 </button>
             </div>
         </div>
