--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -371,7 +371,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card box flow-root-display w-100">
+                <!-- <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
                         <h6>هوش هیجانی</h6>
                     </div>
@@ -680,7 +680,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="card box flow-root-display w-100">
                     <div class="box-header text-right">
                         <h6>اطلاعات تکمیلی</h6>
