--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -102,18 +102,27 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col-6 text-left">
+                                    <div class="col-12 text-left">
                                         <button class="default-btn researcher-card-button-show" value="{{ project.id }}"
                                                 id="{{ researcher.profile.id }}"
                                                 data-url="{% url 'expert:show_researcher_preview' %}">مشاهده
                                         </button>
                                     </div>
-                                    <div class="col-6 text-right">
-                                        <button class="border-button confirm-researcher"
-                                                id="{{ researcher.profile.id }}" value="{{project.id}}">تایید
-                                        </button>
-                                    </div>
                                 </div>
+                                {% if not researcher.accepted and not researcher.refused %}
+                                    <div class="row">
+                                        <div class="col-6 text-left">
+                                            <button class="border-button confirm-researcher"
+                                                    id="{{ researcher.id }}" value="{{project.id}}">تایید
+                                            </button>
+                                        </div>
+                                        <div class="col-6 text-right">
+                                            <button class="border-button refuse-researcher"
+                                                    id="{{ researcher.id }}" value="{{project.id}}">رد
+                                            </button>
+                                        </div>
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
